--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,30 @@
-asgiref==3.3.1
-Django==3.1.4
-djangorestframework==3.12.2
+asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+coreapi==2.3.3
+coreschema==0.0.4
+dj-database-url==2.1.0
+Django==4.2.7
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+drf-yasg==1.17.1
+gunicorn==21.2.0
+idna==3.6
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+packaging==23.2
+Pillow==10.1.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pytz==2020.4
+PyYAML==5.3.1
+requests==2.31.0
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
+six==1.16.0
 sqlparse==0.4.1
+typing_extensions==4.8.0
+uritemplate==3.0.1
+urllib3==2.1.0
