--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ dj-database-url==2.1.0
 Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
-drf-yasg==1.17.1
+drf-yasg==1.21.7
 gunicorn==21.2.0
 idna==3.6
 inflection==0.5.1
@@ -18,7 +18,7 @@ packaging==23.2
 Pillow==10.1.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
-pytz==2020.4
+pytz==2023.3.post1
 PyYAML==5.3.1
 requests==2.31.0
 ruamel.yaml==0.18.5
